# eventlytics-summarizer

./: README.md  pyproject.toml
eventlytics_summarizer/: __init__.py  main.py  prompts.py
